--- a/src/index.css
+++ b/src/index.css
@@ -785,15 +785,18 @@ footer i {
   flex-direction: column;
   align-items: center;
   color: #fff;
+  z-index: 1;
 }
 .project-head {
   font-weight: bold;
   font-size: 30px;
+  z-index: 1;
 }
 .project-bar {
   height: 3px;
   width: 30px;
   background: #fff !important;
+  z-index: 1;
 }
 .pcontainer {
   position: relative;
@@ -899,7 +902,7 @@ footer i {
   position: absolute;
   text-align: center;
   font-size: 4em;
-  color: rgba(255, 255, 255, 0.05);
+  color: rgba(255, 255, 255, 0.2);
   pointer-events: none;
   padding: 300px;
   z-index: 10;
@@ -1193,6 +1196,12 @@ footer i {
 }
 
 @media screen and (max-width: 425px) {
+  .cardContainer .card {
+    width: 90%;
+  }
+  .cardContainer {
+    margin-right: 30px;
+  }
   #header {
     margin-top: 0;
   }
