--- a/styles/globals.css
+++ b/styles/globals.css
@@ -200,7 +200,7 @@ nav {
   align-items: center;
   justify-content: center;
 }
-.header-content .buttons .arrow-btn img {
+.header-content .buttons .arrow-btn div {
   width: 50px;
   height: 20px;
   margin-left: 10px;
@@ -213,7 +213,7 @@ nav {
   border: none;
 }
 
-.header-content button:hover > img {
+.header-content button:hover > div {
   transform: rotate(90deg);
 }
 
@@ -323,12 +323,15 @@ nav {
   text-align: center;
 }
 .section-content .field .icon {
-  min-width: 178px;
-  height: 170px;
+max-width: 250px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
-.section-content .field .icon image {
-  max-width: 100%;
+.section-content .field .icon div {
+  max-width: 50%;
   height: auto;
+  display: block !important;
 }
 
 .field-title {
@@ -553,7 +556,7 @@ nav {
 .contact .contact-vector .vector-image {
   width: 100%;
   height: 20rem;
-  background: url('./images/vector_contact.png');
+  background: url('../images/vector_contact.png');
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -1104,13 +1107,14 @@ footer i {
 
     color: #2a363f;
   }
+
   .section-content .field .icon {
     min-width: 158px;
     height: auto;
   }
-  .section-content .field .icon image {
+  .section-content .field .icon div {
     max-width: 100%;
-    height: auto;
+    height: 90%;
   }
 
   .field-title {
