--- a/styles/globals.css
+++ b/styles/globals.css
@@ -323,15 +323,24 @@ nav {
   text-align: center;
 }
 .section-content .field .icon {
-  max-width: 250px;
+  width: 200px;
+  background-color: #fff;
+  border-radius: 50%;
+  padding: 30px;
+  height: 200px;
+
   display: flex;
   align-items: center;
   justify-content: center;
+  color: #2a363f;
 }
 .section-content .field .icon div {
   max-width: 50%;
   height: auto;
   display: block !important;
+}
+.section-content .field .icon i {
+  font-size: 6rem;
 }
 
 .field-title {
