--- a/styles/globals.css
+++ b/styles/globals.css
@@ -31,7 +31,7 @@ html {
 body {
   font-family: "Poppins";
   overflow-x: hidden !important;
-  overflow-y: hidden;
+  overflow-y: scroll;
   max-width: 100vw;
   scroll-behavior: smooth;
 }
