--- a/styles/globals.css
+++ b/styles/globals.css
@@ -509,7 +509,7 @@ nav {
   align-items: center;
   justify-content: center;
   color: white;
-  font-size: 1rems;
+  font-size: 1rem;
   padding: 0 5px;
 }
 
@@ -755,6 +755,12 @@ footer i {
 
 .sa-link i {
   margin: auto;
+}
+
+/* ............................SKills.............................. */
+.skills {
+  background: #252934;
+  overflow: hidden;
 }
 
 /* ---Alert---- */
@@ -1093,7 +1099,7 @@ footer i {
   }
   .my-image-container {
     width: 230px;
-    height: 230px;
+    height: 300px;
   }
   .header-content {
     padding-top: 40px;
