--- a/styles/globals.css
+++ b/styles/globals.css
@@ -76,7 +76,7 @@ a {
   width: 100%;
   position: relative;
   padding-bottom: 10vh;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 .particles {
@@ -174,6 +174,23 @@ nav {
   border-radius: 50%;
 }
 
+.social-container {
+  display: flex;
+  max-width: 100%;
+  align-items: center;
+  gap: 6rem;
+}
+
+.social-container i {
+  color: #fff;
+  font-size: 4rem;
+  transition: all 1s;
+  cursor: pointer;
+}
+
+.social-container i:hover {
+  color: #08c096;
+}
 .header-text {
   line-height: 1;
   color: #f9f4f4;
@@ -988,9 +1005,16 @@ footer i {
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
 }
 /* --------------------------------------------------Breakpoints--------------------------------------------------------- */
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 321px) {
   .skillname {
     font-size: smaller;
+  }
+  .social-container {
+    gap: 3rem;
+  }
+
+  .social-container i {
+    font-size: 2.5rem;
   }
 }
 
@@ -1252,7 +1276,15 @@ footer i {
   }
 }
 
-@media screen and (max-width: 425px) {
+@media screen and (max-width: 426px) {
+  .social-container {
+    gap: 4rem;
+  }
+
+  .social-container i {
+    font-size: 3rem;
+  }
+
   .cardContainer .card {
     width: 90%;
   }
