--- a/styles/globals.css
+++ b/styles/globals.css
@@ -51,8 +51,7 @@ a {
 }
 
 .brand-logo {
-    height: 4vw;
-    width: 11vw;
+    width: 4vw;
 }
 .brand-logo img {
     height: 100%;
@@ -704,6 +703,8 @@ form button:hover {
 }
 .footer-content-brand {
     margin-bottom: 3rem;
+    height: 100px;
+    width: 100px;
 }
 
 .footer-content-brand img {
@@ -1092,12 +1093,16 @@ footer i {
         display: none;
     }
     .brand-logo {
-        width: 20vw;
+        width: 10vw;
         height: 7vw;
     }
     .my-image-container {
-        width: 230px;
-        height: 300px;
+        width: 250px;
+        height: 340px;
+    }
+    .my-image-container img {
+        width: 100%;
+        height: 100%;
     }
     .header-content {
         padding-top: 40px;
@@ -1272,7 +1277,7 @@ footer i {
         margin: 0 10px;
     }
     .brand-logo {
-        width: 35%;
+        width: 15%;
         height: auto;
     }
     .my-image-container {
